--- a/Recolección de Datos/Chat.html
+++ b/Recolección de Datos/Chat.html
@@ -108,8 +108,8 @@
                             <img class="flash animated" id="imageInput" style="display:none;max-width:150%;object-fit:cover;position:absolute;">
                         </button>
                     </div>
-                    <div class="col-auto col-sm-1 col-md col-lg-1 col-xl-1 col-xxl-1 text-nowrap d-md-flex justify-content-md-end p-0 rounded-4" id="btSend-Cont" style="min-width: 50px;height: 100%;margin-right: 0px;position: static;">
-                        <button class="btn float-end h-100" id="btSend" type="button" style="border-radius : 13px;width: 100%;border-style: none;border-color: #2e2e2e;border-bottom-style: none;">
+                    <div class="col-auto col-sm-1 col-md col-lg-1 col-xl-1 col-xxl-1 text-nowrap d-md-flex justify-content-md-end p-0 rounded-end-4" id="btSend-Cont" style="min-width: 50px;height: 100%;margin-right: 0px;position: static;">
+                        <button class="btn float-end h-100 rounded-end-4" id="btSend" type="button" style="width: 100%;border-style: none;border-bottom-style: none;">
                             <i class="fab fa-telegram-plane" id="btSend-Icon"></i>
                         </button>
                     </div>
