--- a/Recolección de Datos/Chat.html
+++ b/Recolección de Datos/Chat.html
@@ -60,7 +60,7 @@
             <div class="col text-truncate d-sm-block d-md-block d-lg-block d-xl-block text-wrap" style="height: 100%;overflow-y: visible;">
                 <div class="row px-3 py-2" id="Empty-Feed" style="display: flex;">
                     <div class="col d-flex d-xl-flex flex-column justify-content-center align-items-center align-self-center justify-content-xl-center align-items-xl-center" style="overflow: hidden;overflow-y: auto;min-height: 30.5rem;max-height: 30.5rem;height: auto;">
-                        <div class="card border-0 rounded-4" id="EmptyF-BG">
+                        <div class="btn card border-0 rounded-4" id="EmptyF-BG">
                             <div class="card-body text-center">
                                 <p class="card-text">Escribe algo para charlar con</p>
                                 <p class="card-text fw-bold" style="font-family: hedliner;font-size: 25px;color: #fff;">Cheetah Research</p>
@@ -97,7 +97,7 @@
             <div class="col align-content-center" id="TypeB-Container" style="height: 100%;">
                 <div class="row rounded-4" id="TypeB-BG">
                     <div class="col-8 col-sm-8 col-md-8 col-lg-9 col-xl-8 col-xxl-9 p-0" style="height: 100%;">
-                        <textarea id="Message-Input" class="align-content-center border-0" placeholder="Escribir Mensaje..." style="height: 100%;width: 100%;border-radius : 13px;resize: none;padding-left: 10px;background: #ffffff;"></textarea>
+                        <textarea id="Message-Input" class="align-content-center border-0 ps-3" placeholder="Escribir Mensaje..." style="height: 100%;width: 100%;border-radius : 13px;resize: none;background: #ffffff;"></textarea>
                     </div>
                     <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1 col-xxl-1 text-nowrap d-flex d-md-flex flex-fill justify-content-center align-items-center align-content-center p-0 col-1 rounded-4" id="btIMG-Cont" style="height: 100%;margin-right: 0px;">
                         <button class="btn d-flex justify-content-center align-items-center align-content-center mx-auto" id="btIMG" type="button" style="border-radius : 13px;width: 100%;height: 100%;padding: 0px 0px;padding-right: 0px;position: relative;overflow: hidden;">
