Update textarea and footer styling

--- a/Recolección de Datos/Chat.html
+++ b/Recolección de Datos/Chat.html
@@ -97,7 +97,7 @@
             <div class="col align-content-center" id="TypeB-Container" style="height: 100%;">
                 <div class="row rounded-4" id="TypeB-BG">
                     <div class="col-8 col-sm-8 col-md-8 col-lg-9 col-xl-8 col-xxl-9 p-0" style="height: 100%;">
-                        <textarea id="Message-Input" class="align-content-center border-0 ps-3" placeholder="Escribir Mensaje..." style="height: 100%;width: 100%;border-radius : 13px;resize: none;background: #ffffff;"></textarea>
+                        <textarea id="Message-Input" class="align-content-center ps-3" placeholder="Escribir Mensaje..." style="height: 100%;width: 100%;border-radius : 13px;resize: none;background: #ffffff;"></textarea>
                     </div>
                     <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1 col-xxl-1 text-nowrap d-flex d-md-flex flex-fill justify-content-center align-items-center align-content-center p-0 col-1 rounded-4" id="btIMG-Cont" style="height: 100%;margin-right: 0px;">
                         <button class="btn d-flex justify-content-center align-items-center align-content-center mx-auto" id="btIMG" type="button" style="border-radius : 13px;width: 100%;height: 100%;padding: 0px 0px;padding-right: 0px;position: relative;overflow: hidden;">
@@ -116,7 +116,7 @@
                 </div>
             </div>
         </div>
-        <div class="row text-wrap justify-content-center align-items-center align-content-center order-4" id="Copyright-Legend" style="margin-top: 5px;text-align: center;width: 100%;">
+        <div class="row text-wrap justify-content-center align-items-center align-content-center order-4 mt-1 w-100" id="Copyright-Legend" style="text-align: center;font-size: small;">
             <p><strong>Cheetah Research</strong> es una marca registrada de <strong>Marketing Total S.A.</strong>. Todos los derechos reservados.</p>
         </div>
     </div>
