--- a/Recolección de Datos/Chat.html
+++ b/Recolección de Datos/Chat.html
@@ -43,7 +43,7 @@
 </head>
 
 <body class="d-flex flex-column" style="height: 100%;background: url(&quot;assets/img/Main%20BG.png&quot;) center / cover;">
-    <!-- <div class="d-flex" id="overlay"> -->
+    <div class="d-flex" id="overlay">
         
     </div>
 
@@ -120,13 +120,13 @@
             <p><strong>Cheetah Research</strong> es una marca registrada de <strong>Marketing Total S.A.</strong>. Todos los derechos reservados.</p>
         </div>
     </div>
-    <!-- <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tinycolor/1.4.2/tinycolor.min.js"></script>
-    <script src="assets/js/bs-init.js"></script> -->
+    <script src="assets/js/bs-init.js"></script>
     <script src="Chat.js"></script>
-    <!-- <script>
+    <script>
         window.onload = initializePage;
-    </script> -->
+    </script>
 </body>
 
 </html>
