Unset color from CHEETAH RESEARCH label

--- a/Recolección de Datos/Chat.html
+++ b/Recolección de Datos/Chat.html
@@ -63,7 +63,7 @@
                         <div class="btn card border-0 rounded-4" id="EmptyF-BG">
                             <div class="card-body text-center">
                                 <p class="card-text">Escribe algo para charlar con</p>
-                                <p class="card-text fw-bold" style="font-family: hedliner;font-size: 25px;color: #fff;">Cheetah Research</p>
+                                <p class="card-text fw-bold" style="font-family: hedliner;font-size: 25px;">Cheetah Research</p>
                                 <img src="assets/img/Cheetah%20Paw%20Icon.svg" style="width: 60px;height: 60px;">
                                 <p class="card-text" style="padding: 30px;">
                                     <span style="font-family: League Spartan;">Pista: ¡Di Hola!</span>
